# alignx-telemetry

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
dashboards/grafana/: alignx-observability-dashboard.json
examples/: 01_basic_usage.py  02_fastapi_integration.py  03_advanced_decorators.py  README.md
src/alignx_telemetry/: __init__.py  auth.py  configuration.py  context_processor.py  decorators.py  evaluation.py  gpu_metrics.py  logging.py  metrics.py  middleware.py  modern_manager.py  pricing.json  pricing.py  telemetry.py  trace_correlation.py  tracing.py
src/alignx_telemetry/instrumentation/: __init__.py  instrumentators.py
src/alignx_telemetry/langsmith/: __init__.py  callbacks.py  run_helpers.py  run_trees.py  schemas.py  utils.py
src/alignx_telemetry/langsmith/_internal/: __init__.py  _otel_utils.py
src/alignx_telemetry/observability/: __init__.py
src/alignx_telemetry/observability/metrics/: __init__.py  collectors.py  emitters.py  schemas.py
src/alignx_telemetry/providers/: __init__.py  base.py  context.py  metrics.py  registry.py
src/alignx_telemetry/providers/anthropic/: __init__.py  cost_calculator.py  instrumentation.py  metrics_extractor.py  response_parser.py
src/alignx_telemetry/providers/bedrock/: __init__.py  cost_calculator.py  instrumentation.py  metrics_extractor.py  response_parser.py
src/alignx_telemetry/providers/google_genai/: __init__.py  cost_calculator.py  instrumentation.py  metrics_extractor.py  response_parser.py
src/alignx_telemetry/providers/openai/: __init__.py  cost_calculator.py  instrumentation.py  metrics_extractor.py  response_parser.py
src/alignx_telemetry/strategy/: __init__.py  alignx_autogen_strategy.py  alignx_crewai_strategy.py  alignx_langchain_strategy.py  alignx_llamaindex_strategy.py  strategies.py  web_framework_strategy.py
src/alignx_telemetry/unified_tracing/: __init__.py  config.py  metrics_bridge.py  semantic_conventions.py  span_processor.py  workflow_detector.py
